[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.28", features = ["full"] }
quinn = "0.10.1"
rustls = { version = "0.21.0", features = ["quic"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.2.5", features = ["derive"] }
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
winapi = { version = "0.3.9", features = ["winuser", "wincon"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.5.0"
winreg = "0.11.0"

[features]
default = []
windows_service = ["winapi"] 