[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
quinn = "0.10.1"
rustls = { version = "0.21.0", features = ["quic"] }
bytes = "1.4.0"
thiserror = "1.0.40"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rcgen = "0.10.0"
ring = "0.16.20"
tun = "0.5.3"
anyhow = "1.0.70" 