[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.28", features = ["full"] }
quinn = "0.10.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.70"
dashmap = "5.4.0" 